--- a/tools/Makefile
+++ b/tools/Makefile
@@ -3,7 +3,7 @@ CFLAGS := -O3 -Wall -s
 
 default: all
 
-all: elf2dol elf2rel relInfoPrint
+all: elf2dol elf2rel
 
 elf2dol: elf2dol.c
 	$(CC) $(CFLAGS) -o $@ $^
@@ -11,10 +11,6 @@ elf2dol: elf2dol.c
 elf2rel: elf2relv2.c
 	$(CC) $(CFLAGS) -o $@ $^
 
-relInfoPrint: relInfoPrint.c
-	$(CC) $(CFLAGS) -o $@ $^
-
 clean:
 	$(RM) elf2dol
 	$(RM) elf2rel
-	$(RM) relInfoPrint
