Squashed commit of the following:
commit cf5060bc48d9b1f010515a522a67ecf25cb020dc
Author: Amber Brault <celestialamber1@gmail.com>
Date:   Tue Dec 6 07:13:10 2022 -0500

    かも知れない

commit 0971ab94479d308008f7028659d432dc28b955db
Author: Amber Brault <celestialamber1@gmail.com>
Date:   Tue Dec 6 07:09:30 2022 -0500

    Maybe

commit 5ac07eec356e31dada9b5915ba3181c5904a881d
Author: Amber Brault <celestialamber1@gmail.com>
Date:   Tue Dec 6 07:05:49 2022 -0500

    Try to fix yml file

commit 558b01328a272c38889793211333c337da32a39b
Author: Amber Brault <celestialamber1@gmail.com>
Date:   Tue Dec 6 07:03:57 2022 -0500

    Fix indentation

commit ae3d87979bb3cba05f1ad9d2ce0da0b378d5c3e1
Author: Amber Brault <celestialamber1@gmail.com>
Date:   Tue Dec 6 07:01:49 2022 -0500

    Update build.yml

commit 1a15ef5ed48fc9a0d1a8d73337926905ba38807d
Author: Amber Brault <celestialamber1@gmail.com>
Date:   Tue Dec 6 06:59:04 2022 -0500

    Readd shiftability fix

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,9 @@ jobs:
     - uses: actions/checkout@v3
     - name: Download compilers
       run: |
+        mkdir tools/mwcc_compiler
         curl -L https://cdn.discordapp.com/attachments/727918646525165659/917185027656286218/GC_WII_COMPILERS.zip \
-          | bsdtar -xvf- -C tools
+          | bsdtar -xvf- -C tools/mwcc_compiler
     - name: Build
       run: make -j$(nproc) MAPGENFLAG=1
     - name: Upload map
