--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
         sudo apt-get update
         sudo apt-get -y install build-essential gcc-multilib g++-multilib libc6:i386
         curl -L https://cdn.discordapp.com/attachments/727918646525165659/917185027656286218/GC_WII_COMPILERS.zip \
-          | bsdtar -xvf- -C tools/mwcc_compiler/
+          | bsdtar -xvf- -C tools/mwcc_compiler
     - name: Build WiBo
       working-directory: tools/WiBo
       run: |
