--- a/src/NdevExi2A/Makefile
+++ b/src/NdevExi2A/Makefile
@@ -2,7 +2,11 @@ NDEV_FILES:=\
 	$(BUILD_DIR)/asm/NdevExi2A/DebuggerDriver.o\
 	$(BUILD_DIR)/asm/NdevExi2A/exi2.o\
 
-$(NDEV_FILES): CFLAGS += -sym on
+$(NDEV_FILES): CFLAGS = -Cpp_exceptions off -enum int -inline auto -ipa file -proc gekko -fp hard -O4,p -nodefaults  -func_align 4 $(INCLUDES)
+
+#Ndev uses GC 3.0
+$(NDEV_O_FILES): MWCC_VERSION := 3.0
+$(NDEV_O_FILES): CONSOLE := GC
 
 DEPENDS += $(NDEV_FILES:.o=.d)
 
