--- a/src/RevoSDK/Makefile
+++ b/src/RevoSDK/Makefile
@@ -236,9 +236,13 @@ RVL_SDK_FILES:=\
 	$(BUILD_DIR)/asm/RevoSDK/wpad/debug_msg.o\
 	$(BUILD_DIR)/asm/RevoSDK/wud/WUD.o\
 	$(BUILD_DIR)/asm/RevoSDK/wud/WUDHidHost.o\
-	$(BUILD_DIR)/asm/RevoSDK/wud/debug_msg.o
+	$(BUILD_DIR)/asm/RevoSDK/wud/debug_msg.o\
 
-$(RVL_SDK_FILES): CFLAGS += -sym on
+#All the functions in the Wii SDK except for bte are aligned to 16 bytes, so this is necessary.
+$(RVL_SDK_FILES): CFLAGS += -Cpp_exceptions off -func_align 16
+
+#arc.c doesn't use -use_lmw_stmw on, and uses -ipa file and (maybe rest of wii sdk too?)
+$(BUILD_DIR)/src/RevoSDK/arc/arc.o: CFLAGS = -Cpp_exceptions off -enum int -inline auto -ipa file -proc gekko -fp hard -O4,p -nodefaults -func_align 16 $(INCLUDES)
 
 DEPENDS += $(RVL_SDK_FILES:.o=.d)
 
