--- a/src/PowerPC_EABI_Support/Makefile
+++ b/src/PowerPC_EABI_Support/Makefile
@@ -101,9 +101,13 @@ MW_FILES:=\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/msghndlr.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/mslsupp.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/targimpl.o\
-	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/target_options.o
+	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/target_options.o\
 
-$(MW_FILES): CFLAGS += -sym on
+$(MW_O_FILES): CFLAGS += -Cpp_exceptions off
+
+#Runtime has defaults and exceptions turned on
+$(BUILD_DIR)/src/PowerPC_EABI_Support/Runtime/%.o: CFLAGS = -use_lmw_stmw on -inline on -proc gekko -fp hard -O4,p -func_align 4 $(INCLUDES)
+
 
 DEPENDS += $(MW_FILES:.o=.d)
 
