--- a/src/NdevExi2A/Makefile
+++ b/src/NdevExi2A/Makefile
@@ -1,12 +1,15 @@
 NDEV_FILES:=\
-	$(BUILD_DIR)/asm/NdevExi2A/DebuggerDriver.o\
-	$(BUILD_DIR)/asm/NdevExi2A/exi2.o\
+	$(BUILD_DIR)/src/NdevExi2A/DebuggerDriver.o\
+	$(BUILD_DIR)/src/NdevExi2A/exi2.o\
 
-$(NDEV_FILES): CFLAGS = -Cpp_exceptions off -enum int -inline auto -ipa file -proc gekko -fp hard -O4,p -nodefaults  -func_align 4 $(INCLUDES)
-
+$(NDEV_FILES): CFLAGS = -Cpp_exceptions off -enum int -inline auto -ipa file -proc gekko -fp hard -O4,p -nodefaults -func_align 4 $(INCLUDES)
 #Ndev uses GC 3.0
-$(NDEV_O_FILES): MWCC_VERSION := 3.0
-$(NDEV_O_FILES): CONSOLE := GC
+$(NDEV_FILES): MWCC_VERSION := 3.0
+$(NDEV_FILES): CONSOLE := GC
+
+ifeq ($(NON_MATCHING),1)
+CFLAGS += -DNON_MATCHING
+endif
 
 DEPENDS += $(NDEV_FILES:.o=.d)
 
