--- a/src/PowerPC_EABI_Support/Makefile
+++ b/src/PowerPC_EABI_Support/Makefile
@@ -1,25 +1,25 @@
 MW_FILES:=\
 	$(BUILD_DIR)/src/PowerPC_EABI_Support/Runtime/__mem.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/Runtime/__exception.o\
-	$(BUILD_DIR)/asm/PowerPC_EABI_Support/Runtime/strlen.o\
-	$(BUILD_DIR)/asm/PowerPC_EABI_Support/Runtime/__va_arg.o\
+	$(BUILD_DIR)/src/PowerPC_EABI_Support/Runtime/strlen.o\
+	$(BUILD_DIR)/src/PowerPC_EABI_Support/Runtime/__va_arg.o\
 	$(BUILD_DIR)/src/PowerPC_EABI_Support/Runtime/global_destructor_chain.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/Runtime/NMWException.o\
-	$(BUILD_DIR)/asm/PowerPC_EABI_Support/Runtime/ptmf.o\
+	$(BUILD_DIR)/src/PowerPC_EABI_Support/Runtime/ptmf.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/Runtime/MWRTTI.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/Runtime/runtime.o\
 	$(BUILD_DIR)/src/PowerPC_EABI_Support/Runtime/__init_cpp_exceptions.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/Runtime/Gecko_ExceptionPPC.o\
-	$(BUILD_DIR)/asm/PowerPC_EABI_Support/Runtime/GCN_mem_alloc.o\
+	$(BUILD_DIR)/src/PowerPC_EABI_Support/Runtime/GCN_mem_alloc.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common/alloc.o\
-	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common/ansi_files.o\
+	$(BUILD_DIR)/src/PowerPC_EABI_Support/MSL_C/MSL_Common/ansi_files.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common_Embedded/ansi_fp.o\
-	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common/arith.o\
+	$(BUILD_DIR)/src/PowerPC_EABI_Support/MSL_C/MSL_Common/arith.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common/assert.o\
-	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common/buffer_io.o\
+	$(BUILD_DIR)/src/PowerPC_EABI_Support/MSL_C/MSL_Common/buffer_io.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common/direct_io.o\
 	$(BUILD_DIR)/src/PowerPC_EABI_Support/MSL_C/MSL_Common/errno.o\
-	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common/file_io.o\
+	$(BUILD_DIR)/src/PowerPC_EABI_Support/MSL_C/MSL_Common/file_io.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common/file_pos.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common/mbstring.o\
 	$(BUILD_DIR)/src/PowerPC_EABI_Support/MSL_C/MSL_Common/mem.o\
@@ -31,7 +31,7 @@ MW_FILES:=\
 	$(BUILD_DIR)/src/PowerPC_EABI_Support/MSL_C/MSL_Common/float.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common/scanf.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common/signal.o\
-	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common/string.o\
+	$(BUILD_DIR)/src/PowerPC_EABI_Support/MSL_C/MSL_Common/string.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common/strtold.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common/strtoul.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common/wcstoul.o\
@@ -40,7 +40,7 @@ MW_FILES:=\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common/wscanf.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common/wstring.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/MSL_Common/wchar_io.o\
-	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/PPC_EABI/uart_console_io_gcn.o\
+	$(BUILD_DIR)/src/PowerPC_EABI_Support/MSL_C/PPC_EABI/uart_console_io_gcn.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MSL_C/PPC_EABI/abort_exit_ppc_eabi.o\
 	$(BUILD_DIR)/src/PowerPC_EABI_Support/MSL_C/MSL_Common_Embedded/math_double.o\
 	$(BUILD_DIR)/src/PowerPC_EABI_Support/MSL_C/MSL_Common_Embedded/math_sun.o\
@@ -103,11 +103,16 @@ MW_FILES:=\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/targimpl.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/target_options.o\
 
-$(MW_O_FILES): CFLAGS += -Cpp_exceptions off -inline on
+$(MW_O_FILES): CFLAGS += -Cpp_exceptions off -inline on -str pool,readonly,reuse
 
-#Runtime has defaults and exceptions turned on
-$(BUILD_DIR)/src/PowerPC_EABI_Support/Runtime/%.o: CFLAGS = -Cpp_exceptions off -use_lmw_stmw on -inline on -proc gekko -fp hard -O4,p -func_align 4 $(INCLUDES)
+#strcpy needs O4,s
+$(BUILD_DIR)/src/PowerPC_EABI_Support/MSL_C/MSL_Common/string.o: CFLAGS = -use_lmw_stmw on -inline on -proc gekko -fp hard -O4,s -str pool,readonly,reuse -func_align 4 $(INCLUDES)
 
+#Runtime has exceptions turned on for 3 specific files
+$(BUILD_DIR)/src/PowerPC_EABI_Support/Runtime/%.o: CFLAGS = -Cpp_exceptions off -use_lmw_stmw on -inline on -proc gekko -fp hard -O4,p -str pool,readonly,reuse -func_align 4 $(INCLUDES)
+$(BUILD_DIR)/src/PowerPC_EABI_Support/Runtime/NMWException.o: CFLAGS += -Cpp_exceptions on
+$(BUILD_DIR)/src/PowerPC_EABI_Support/Runtime/MWRTTI.o: CFLAGS += -Cpp_exceptions on
+$(BUILD_DIR)/src/PowerPC_EABI_Support/Runtime/Gecko_ExceptionPPC.o: CFLAGS += -Cpp_exceptions on
 
 DEPENDS += $(MW_FILES:.o=.d)
 
