Reorganize metrowerks code + nubinit OK

--- a/src/PowerPC_EABI_Support/MetroTRK/Makefile
+++ b/src/PowerPC_EABI_Support/MetroTRK/Makefile
@@ -1,6 +1,6 @@
 TRK_FILES:=\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/targsupp.o\
-	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/main.o\
+	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/custconn/cc_gdev.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/custconn/MWCriticalSection_gc.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/custconn/CircleBuffer.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/flush_cache.o\
@@ -12,7 +12,7 @@ TRK_FILES:=\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/dolphin_trk_glue.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/notify.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/nubevent.o\
-	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/nubinit.o\
+	$(BUILD_DIR)/src/PowerPC_EABI_Support/MetroTRK/nubinit.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/serpoll.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/string_TRK.o\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/support.o\
@@ -26,6 +26,8 @@ TRK_FILES:=\
 	$(BUILD_DIR)/asm/PowerPC_EABI_Support/MetroTRK/target_options.o\
 
 DEPENDS += $(TRK_FILES:.o=.d)
+
+$(TRK_FILES): CFLAGS += -Cpp_exceptions off -inline on
 
 $(BUILD_DIR)/src/PowerPC_EABI_Support/MetroTRK/TRK_Hollywood_Revolution.a: $(TRK_FILES)
 	@echo Linking... $@
