--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,14 @@ jobs:
         cmake --build build
     - name: Build
       run: make -j$(nproc) WINE=./tools/WiBo/build/wibo MAPGENFLAG=1
+    - name: Upload progress
+      if: github.ref == 'refs/heads/main'
+      continue-on-error: true
+      env:
+        PROGRESS_API_KEY: ${{secrets.PROGRESS_API_KEY}}
+      run: |
+        python tools/upload-progress.py -b https://progress.deco.mp/ -p xenoblade -v jp \
+          build/xenoblade.jp/main.dol.progress
     - name: Upload map
       uses: actions/upload-artifact@v2
       with:
