--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,9 +22,10 @@ jobs:
       run: |
         sudo dpkg --add-architecture i386
         sudo apt-get update
-        sudo apt-get -y install build-essential gcc-multilib g++-multilib libc6:i386
+        sudo apt-get -y install python3-pip build-essential gcc-multilib g++-multilib libc6:i386
+        pip3 install requests
         curl -L https://cdn.discordapp.com/attachments/727918646525165659/917185027656286218/GC_WII_COMPILERS.zip \
-          | bsdtar -xvf- -C tools/mwcc_compiler
+        | bsdtar -xvf- -C tools/mwcc_compiler
     - name: Build WiBo
       working-directory: tools/WiBo
       run: |
@@ -32,6 +33,14 @@ jobs:
         cmake --build build
     - name: Build
       run: make -j$(nproc) WINE=./tools/WiBo/build/wibo MAPGENFLAG=1
+    - name: Upload progress
+      if: github.ref == 'refs/heads/main'
+      continue-on-error: true
+      env:
+        PROGRESS_API_KEY: ${{secrets.PROGRESS_API_KEY}}
+      run: |
+        python3 tools/upload-progress.py -b https://progress.deco.mp/ -p xenoblade -v jp \
+          build/xenoblade.jp/main.dol.progress
     - name: Upload map
       uses: actions/upload-artifact@v2
       with:
