Split Criware into sublibs
Also match two more TRK files

--- a/src/CriWare/Makefile
+++ b/src/CriWare/Makefile
@@ -1,151 +1,6 @@
 CRIWARE_FILES :=\
-	$(BUILD_DIR)/asm/CriWare/adx/adxf/adx_fini.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxf/adx_fs.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxf/adx_fcch.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_fsvr.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_inis.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_lsc.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_mng.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_sfa.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_sjd.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_stmc.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_tlk2.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_tlk.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_tsvr.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_xpnd.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_amp.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_bahx.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_baif.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_bsc.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_bwav.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/code_80389300.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_crs.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_dcd5.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_dcd.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_errs.o\
-	$(BUILD_DIR)/asm/CriWare/adx/ahx/ahx_ftbl.o\
-	$(BUILD_DIR)/asm/CriWare/adx/ahx/ahx_link.o\
-	$(BUILD_DIR)/asm/CriWare/adx/ahx/ahx_mflt_c.o\
-	$(BUILD_DIR)/asm/CriWare/adx/ahx/ahx_mwin2_c.o\
-	$(BUILD_DIR)/asm/CriWare/adx/ahx/ahx_sbf2.o\
-	$(BUILD_DIR)/asm/CriWare/adx/ahx/ahx_sbf.o\
-	$(BUILD_DIR)/asm/CriWare/adx/ahx/ahx_sjd.o\
-	$(BUILD_DIR)/asm/CriWare/adx/ahx/ahx_wtbl.o\
-	$(BUILD_DIR)/asm/CriWare/adx/ahx/adx_hdr.o\
-	$(BUILD_DIR)/asm/CriWare/adx/ahx/ahx_atbl.o\
-	$(BUILD_DIR)/asm/CriWare/adx/ahx/ahx_bsr.o\
-	$(BUILD_DIR)/asm/CriWare/adx/ahx/ahx_cmn.o\
-	$(BUILD_DIR)/asm/CriWare/adx/ahx/ahx_dcd.o\
-	$(BUILD_DIR)/asm/CriWare/adx/cricfg/cfg_lib.o\
-	$(BUILD_DIR)/asm/CriWare/adx/cvfs/cri_cvfs.o\
-	$(BUILD_DIR)/asm/CriWare/adx/gcci/gcci.o\
-	$(BUILD_DIR)/asm/CriWare/adx/gcci/gcci_sub.o\
-	$(BUILD_DIR)/asm/CriWare/adx/lsc/lsc_err.o\
-	$(BUILD_DIR)/asm/CriWare/adx/lsc/lsc_ini.o\
-	$(BUILD_DIR)/asm/CriWare/adx/lsc/lsc_svr.o\
-	$(BUILD_DIR)/asm/CriWare/adx/lsc/lsc.o\
-	$(BUILD_DIR)/asm/CriWare/adx/lsc/lsc_crs.o\
-	$(BUILD_DIR)/asm/CriWare/adx/mfci/mfci.o\
-	$(BUILD_DIR)/asm/CriWare/adx/sj/sj_mem.o\
-	$(BUILD_DIR)/asm/CriWare/adx/sj/sj_rbf.o\
-	$(BUILD_DIR)/asm/CriWare/adx/sj/sj_uni.o\
-	$(BUILD_DIR)/asm/CriWare/adx/sj/sj_utl.o\
-	$(BUILD_DIR)/asm/CriWare/adx/sj/sj_crs.o\
-	$(BUILD_DIR)/asm/CriWare/adx/sj/sj_err.o\
-	$(BUILD_DIR)/asm/CriWare/adx/svm/svm.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_bsps.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/adx_bau.o\
-	$(BUILD_DIR)/asm/CriWare/adx/wiirna/rna_crs.o\
-	$(BUILD_DIR)/asm/CriWare/adx/wiirna/rna_err.o\
-	$(BUILD_DIR)/asm/CriWare/adx/wiirna/ax_rna.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/srcwii/adx_mwii.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/srcwii/adx_suwii.o\
-	$(BUILD_DIR)/asm/CriWare/adx/adxt/srcwii/adx_rnawii.o\
-	$(BUILD_DIR)/asm/CriWare/cri_crw_std.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/cft/srcgc/cftyp422_ppc.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/cft/cft_common.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/mwply/mwsfdfrm.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/mwply/mwsfdrna.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/mwply/mwsfdsl.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/mwply/mwsfdsvm.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/mwply/mwstm.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/mwply/mwsfdsfx.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/mwply/mwsfdcre.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/mwply/mwsfdlib.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/mwply/mwsfdply.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/mwply/mwsfdset.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/mwply/mwsfdsvr.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/mwply/mwsfdsst.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/mwply/mwsfx_Y84C44.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/mwply/code_803A3AE4.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mpv/mpv_bdec.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mpv/mpv_cdec.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mpv/mpv_cmc.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mpv/mpv_dec.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mpv/mpv_deli.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mpv/mpv_emp.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mpv/mpv_err.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mpv/mpv_frm.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mpv/mpv_get.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mpv/mpv_hdec.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mpv/mpv_lib.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mpv/mpv_mc.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mpv/mpv_vlc.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mpv/mpv_umc.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mpv/mpv_mcy.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mpv/mpv_m2v.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mpv/mpvabdec.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mpv/mpv_slice.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/dct/dct_ac.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/dct/dct_isr.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/dct/dct_ver.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/memcpy/mcp_not.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mps/mps_dec.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mps/mps_del.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mps/mps_get.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/mps/mps_lib.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_adxt.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_aoap.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_buf.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_con.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_hds.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_lib.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_mem.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_mps.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_mpv.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_mpvf.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_pl2.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_ply.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_pts.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_see.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_set.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_tim.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_trn.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_uo.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_vom.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_tmr.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_tst.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfd/sfd_seeki.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfh/sfh_main.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfh/sfh_ver1.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/sfh/sfh_ver2.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/uty/cmptime.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/uty/memcpyd.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/uty/memsetd.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/uty/muldiv.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/uty/muldivr.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfdcore/uty/uty_tmr.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfx/sfx_set.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfx/sfx_cnv.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfx/sfx_inf.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfx/sfx_lib.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfx/sfx_alp.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfx/sfx_zmv.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfx/sfx_sud.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sfx/sfx_cnv_to_Y84C44.o\
-	$(BUILD_DIR)/asm/CriWare/sofdec/sud/sud_lib.o\
-
-DEPENDS += $(CRIWARE_FILES:.o=.d)
+	$(BUILD_DIR)/src/CriWare/adx/libadxwii.a\
+	$(BUILD_DIR)/src/CriWare/sofdec/libmwsfdwii.a\
 
 $(BUILD_DIR)/src/CriWare/CriWare.a: $(CRIWARE_FILES)
 	@echo Linking... $@
