wprintf.c and runtime.c OK

--- a/src/nw4r/Makefile
+++ b/src/nw4r/Makefile
@@ -11,6 +11,8 @@ NW4R_FILES:=\
 #$(NW4R_FILES): MWCC_VERSION := 3.0
 #$(NW4R_FILES): CONSOLE := GC
 
+$(NW4R_FILES): CFLAGS += -inline auto -Cpp_exceptions off
+
 
 $(BUILD_DIR)/src/nw4r/nw4r.a: $(NW4R_FILES)
 	@echo Linking... $@
