--- a/libs/PowerPC_EABI_Support/src/MetroTRK/Makefile
+++ b/libs/PowerPC_EABI_Support/src/MetroTRK/Makefile
@@ -21,7 +21,7 @@ TRK_FILES:=\
 	$(BUILD_DIR)/libs/PowerPC_EABI_Support/src/MetroTRK/mpc_7xx_603e.o\
 	$(BUILD_DIR)/libs/PowerPC_EABI_Support/src/MetroTRK/msg.o\
 	$(BUILD_DIR)/libs/PowerPC_EABI_Support/asm/MetroTRK/msgbuf.o\
-	$(BUILD_DIR)/libs/PowerPC_EABI_Support/asm/MetroTRK/msghndlr.o\
+	$(BUILD_DIR)/libs/PowerPC_EABI_Support/src/MetroTRK/msghndlr.o\
 	$(BUILD_DIR)/libs/PowerPC_EABI_Support/src/MetroTRK/mslsupp.o\
 	$(BUILD_DIR)/libs/PowerPC_EABI_Support/asm/MetroTRK/targimpl.o\
 	$(BUILD_DIR)/libs/PowerPC_EABI_Support/src/MetroTRK/target_options.o\
@@ -32,7 +32,7 @@ DEPENDS += $(TRK_FILES:.o=.d)
 $(TRK_FILES): CFLAGS += -Cpp_exceptions off -inline on
 
 $(BUILD_DIR)/libs/PowerPC_EABI_Support/src/MetroTRK/dolphin_trk_glue.o: CFLAGS += -str pool
-$(BUILD_DIR)/libs/PowerPC_EABI_Support/src/MetroTRK/msghndlr.o: CFLAGS += -str pool -use_lmw_stmw off
+$(BUILD_DIR)/libs/PowerPC_EABI_Support/src/MetroTRK/msghndlr.o: CFLAGS += -str pool
 
 $(BUILD_DIR)/libs/PowerPC_EABI_Support/src/MetroTRK/TRK_Hollywood_Revolution.a: $(TRK_FILES)
 	@echo Linking... $@
