--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,9 @@ jobs:
     - name: Git config
       run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
     - name: Build
-      run: make -j$(nproc) COMPILERS=/compilers
+      run: |
+        python configure.py --map --compilers /compilers/GC
+        ninja
     - name: Upload progress
       if: github.ref == 'refs/heads/main'
       continue-on-error: true
@@ -31,3 +33,17 @@ jobs:
       with:
         name: xenoblade.jp.MAP
         path: build/*/xenoblade.jp.MAP
+  
+  build_make:
+    name: Build
+    runs-on: ubuntu-latest
+    container: ghcr.io/xbret/build:main
+    strategy:
+      fail-fast: false
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v3
+    - name: Git config
+      run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
+    - name: Build
+      run: make -j$(nproc) COMPILERS=/compilers
