--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,4 +46,6 @@ jobs:
     - name: Git config
       run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
     - name: Build
-      run: make -j$(nproc) COMPILERS=/compilers
+      run: |
+        python configure.py --map --compilers /compilers
+        make -j$(nproc) COMPILERS=/compilers
