I hate my existence (and devkitpro)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,4 +48,4 @@ jobs:
     - name: Build
       run: |
         python configure.py --map --compilers /compilers
-        make -j$(nproc) COMPILERS=/compilers
+        make -j$(nproc) COMPILERS=/compilers POWERPC=/opt/devkitpro/devkitPPC/bin
