--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
     - name: Build
       run: |
-        python configure.py --map --compilers /compilers
+        python configure.py -m --compilers /compilers --powerpc /opt/devkitpro/devkitPPC/bin
         ninja
     - name: Upload progress
       if: github.ref == 'refs/heads/main'
