I am a silly willy

--- a/libs/CriWare/src/adx/Makefile
+++ b/libs/CriWare/src/adx/Makefile
@@ -50,6 +50,7 @@ ADX_FILES :=\
 	$(BUILD_DIR)/libs/CriWare/asm/adx/sj/sj_rbf.o\
 	$(BUILD_DIR)/libs/CriWare/asm/adx/sj/sj_uni.o\
 	$(BUILD_DIR)/libs/CriWare/asm/adx/sj/sj_utl.o\
+	$(BUILD_DIR)/libs/CriWare/src/adx/sj/sj_crs.o\
 	$(BUILD_DIR)/libs/CriWare/asm/adx/sj/sj_err.o\
 	$(BUILD_DIR)/libs/CriWare/asm/adx/svm/svm.o\
 	$(BUILD_DIR)/libs/CriWare/asm/adx/adxt/adx_bsps.o\
