Update vscode stuff/work on CfObject headers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,28 @@
 {
 	"[c]": {
-	  "files.encoding": "shiftjis"
+	  "files.encoding": "shiftjis",
+	  "editor.defaultFormatter": "ms-vscode.cpptools"
 	},
 	"[cpp]": {
-	  "files.encoding": "shiftjis"
+	  "files.encoding": "shiftjis",
+	  "editor.defaultFormatter": "ms-vscode.cpptools"
 	},
+	"editor.tabSize": 4,
 	"files.exclude": {
-        "**/CVS": false
-    }
+        "**/CVS": false,
+		"**/*.ctx": true
+	},
+	"files.associations": {
+		"*.cp": "cpp",
+		"*.asm": "wla-dx-asm",
+		"__tuple": "c",
+		"array": "c",
+		"ppc_version.h": "c",
+		"bitset": "c",
+		"optional": "c",
+		"dstypes.h": "c",
+		"cc_gdev.h": "c",
+		"exception": "c",
+		"__locale": "cpp"
+	}
 }
