--- a/libs/nw4r/src/g3d/Makefile
+++ b/libs/nw4r/src/g3d/Makefile
@@ -60,7 +60,7 @@ NW4R_G3D_FILES:=\
 DEPENDS += $(NW4R_G3D_FILES:.o=.d)
 
 #NW4R uses GC 3.0
-$(NW4R_G3D_FILES): MWCC_VERSION := 3.0
+$(NW4R_G3D_FILES): MWCC_VERSION := 3.0a5.2
 $(NW4R_G3D_FILES): CONSOLE := GC
 
 $(BUILD_DIR)/libs/nw4r/src/g3d/libnw4r_g3d.a: $(NW4R_G3D_FILES)
