--- a/libs/nw4r/src/snd/Makefile
+++ b/libs/nw4r/src/snd/Makefile
@@ -60,7 +60,7 @@ NW4R_SND_FILES:=\
 DEPENDS += $(NW4R_SND_FILES:.o=.d)
 
 #NW4R uses GC 3.0
-$(NW4R_SND_FILES): MWCC_VERSION := 3.0
+$(NW4R_SND_FILES): MWCC_VERSION := 3.0a5.2
 $(NW4R_SND_FILES): CONSOLE := GC
 
 $(BUILD_DIR)/libs/nw4r/src/snd/libnw4r_snd.a: $(NW4R_SND_FILES)
