--- a/libs/nw4r/src/lyt/Makefile
+++ b/libs/nw4r/src/lyt/Makefile
@@ -19,7 +19,7 @@ NW4R_LYT_FILES:=\
 DEPENDS += $(NW4R_LYT_FILES:.o=.d)
 
 #NW4R uses GC 3.0
-$(NW4R_LYT_FILES): MWCC_VERSION := 3.0
+$(NW4R_LYT_FILES): MWCC_VERSION := 3.0a5.2
 $(NW4R_LYT_FILES): CONSOLE := GC
 
 $(BUILD_DIR)/libs/nw4r/src/lyt/libnw4r_lyt.a: $(NW4R_LYT_FILES)
