--- a/libs/nw4r/src/math/Makefile
+++ b/libs/nw4r/src/math/Makefile
@@ -7,7 +7,7 @@ NW4R_MATH_FILES:=\
 DEPENDS += $(NW4R_MATH_FILES:.o=.d)
 
 #NW4R uses GC 3.0
-$(NW4R_MATH_FILES): MWCC_VERSION := 3.0
+$(NW4R_MATH_FILES): MWCC_VERSION := 3.0a5.2
 $(NW4R_MATH_FILES): CONSOLE := GC
 
 $(BUILD_DIR)/libs/nw4r/src/math/libnw4r_math.a: $(NW4R_MATH_FILES)
